--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>JS F8</title>
   </head>
   <body>
-    <h1>Javascript F8</h1>
+    <h1><p>Javascript F8</p></h1>
     <script src="main.js"></script>
   </body>
 </html>
