--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>JS F8</title>
   </head>
   <body>
-    <h1 id="title"><p>Javascript F8</p></h1>
+    <h1 id="title" class="product-list product"><p>Javascript F8</p></h1>
+    <h1 id="title" class="product-list product"><p>Javascript F8</p></h1>
+    <h1 id="title" class="product-list"><p>Javascript F8</p></h1>
+    <button></button>
+    <div class="box-1">
+      <li>A1</li>
+      <li>B1</li>
+    </div>
+    <div class="box-2">
+      <li>A2</li>
+      <li>B2</li>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
