--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li>A2</li>
       <li>B2</li>
     </div>
+    <ul class="courses-list"></ul>
     <script src="main.js"></script>
   </body>
 </html>
