--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
       <li>B2</li>
     </div>
     <ul class="courses-list"></ul>
+    <h2><span>Box 1</span></h2>
+    <h2><span>Box 2</span></h2>
+    <h2><span>Box 3</span></h2>
+    <button>Submit</button>
+    <input type="text" name="" id="" />
+    <input type="checkbox" name="" id="" />
+    <select name="" id="">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+    </select>
     <script src="main.js"></script>
   </body>
 </html>
