--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <input type="text" name="" id="" />
     <input type="checkbox" name="" id="" />
     <select name="" id="">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
+      <option value="value 1">1</option>
+      <option value="value 2">2</option>
+      <option value="value 3">3</option>
     </select>
     <script src="main.js"></script>
   </body>
