--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>JS F8</title>
   </head>
   <body>
-    <h1 id="title" class="product-list product"><p>Javascript F8</p></h1>
+    <!-- <h1 id="title" class="product-list product"><p>Javascript F8</p></h1>
     <h1 id="title" class="product-list product"><p>Javascript F8</p></h1>
     <h1 id="title" class="product-list"><p>Javascript F8</p></h1>
     <button></button>
@@ -37,6 +37,34 @@
       <option value="value 2">2</option>
       <option value="value 3">3</option>
     </select>
+    <a href="http://www.nettruyenco.com/">Nettruyen</a>
+    <a href="https://www.google.com/">Google</a>
+    <input
+      class="preventDefault"
+      type="text"
+      name=""
+      id=""
+      placeholder="Tìm kiếm"
+    />
+    <ul>
+      <li>Course Javascript</li>
+      <li>Course PHP</li>
+      <li>Course Golang</li>
+    </ul> -->
+
+    <!-- <div>
+      DIV
+      <button>Click me</button>
+    </div> -->
+    <div class="main">
+      <div id="id1" class="container">
+        Box 1
+        <div id="id2" class="container">
+          Box 2
+          <div id="id3" class="container">Box 3</div>
+        </div>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
