--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
       </div>
     </div>
+    <div id="user-block"></div>
     <script src="main.js"></script>
   </body>
 </html>
