--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       </div>
     </div>
     <div id="user-block"></div>
+    <img src="" alt="" />
     <script src="main.js"></script>
   </body>
 </html>
