fetch read data

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       DIV
       <button>Click me</button>
     </div> -->
-    <div class="main">
+    <!-- <div class="main">
       <div id="id1" class="container">
         Box 1
         <div id="id2" class="container">
@@ -65,8 +65,12 @@
         </div>
       </div>
     </div>
-    <div id="user-block"></div>
-    <img src="" alt="" />
+    <div id="user-block"></div> -->
+    <!-- <img src="" alt="" /> -->
+    <div>
+      <h2>Danh sach khoa hoc</h2>
+      <ul id="list-courses"></ul>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
