--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
       <h2>Danh sach khoa hoc</h2>
       <ul id="list-courses"></ul>
     </div>
+
+    <div>
+      <label for="">Name</label>
+      <input type="text" name="name" />
+    </div>
+    <div>
+      <label for="">Description</label>
+      <input type="text" name="description" />
+    </div>
+    <div>
+      <button id="create">Submit</button>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
