Jiā Yóu! Promise practice

--- a/F8 Js cơ bản bài 179/index.html
+++ b/F8 Js cơ bản bài 179/index.html
@@ -84,6 +84,8 @@
         <button id="create">Create</button>
       </div>
     </div> -->
+    <ul id="comment-block"></ul>
+
     <script src="main.js"></script>
   </body>
 </html>
