more practice js

--- a/F8 Js cơ bản bài 179/index.html
+++ b/F8 Js cơ bản bài 179/index.html
@@ -84,8 +84,24 @@
         <button id="create">Create</button>
       </div>
     </div> -->
-    <ul id="comment-block"></ul>
-
+    <!-- <ul id="comment-block"></ul> -->
+    <div>
+      <h2>Danh sach khoa hoc</h2>
+      <ul id="list-courses"></ul>
+    </div>
+    <div>
+      <div>
+        <label for="">Name</label>
+        <input type="text" name="name" />
+      </div>
+      <div>
+        <label for="">Description</label>
+        <input type="text" name="description" />
+      </div>
+      <div>
+        <button id="create">Create</button>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
