The end of ES6 tutorial

--- a/F8 Js cơ bản bài 179/index.html
+++ b/F8 Js cơ bản bài 179/index.html
@@ -102,6 +102,6 @@
         <button id="create">Create</button>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
